	* CAN masks changed. Now all firmware versions can read force data.
	* compute_pwm function changed. All firmware versions can now enter MODE_TORQUE control mode.
	* four force watchdogs are now used to check if force data from board 11/12/13/14 are recevied.
	  boards 11/12 can be virtual (forces calculated by iDyn and transmitted on CAN bus by PC104)  
	* Current build 39.	

2010-28-June  Francesco Nori <iron@liralab.it>
	* Bug fixed on the shoulder coupling
	* Current build 40.	

2010-06-July  Marco Randazzo <marco.randazzo@iit.it>
	* Added various CAN mesages to set the impedance of a joint
	* Impedance velocity mode separated by Impedance Position Mode
	* Current build 41.	

2010-26-July  Marco Randazzo <marco.randazzo@iit.it>
	* New decoupling matrix for torque control
 	* IMPORTANT: in function can_send_broadcast() now PWM is transmitted BEFORE the decoupling.
 	             function decouple_dutycycle_new_joint() expects transmitted torques at the joint level (before decoupling),
		     while the old function decouple_dutycycle() expects torques at motor level (after decoupling) 
		     you can change this behavior by setting/unsetting the macro USE_NEW_DECOUPLING in decoupling.h 
	* Current build 43
	
2010-02-Aug  Marco Randazzo <marco.randazzo@iit.it>
    * receiving a calibration command (_calibrated[i]==true) is now mandatory in order to turn PWM ON
	* Current build 44

2010-19-Aug  Marco Randazzo <marco.randazzo@iit.it>
	* torque error is now broadcasted separetly by position error.
	* A new broadcast message, CAN_BCAST_PID_ERROR, is introduced, that contains position error and torque error.
	* CAN_BCAST_CURRENT now contains only the current information, not the pid error.
	* Current build 46
2010-31-Aug  Maggiali Marco <marco.maggiali@iit.t>
* fix the error in the CAN_read (there is a check in the LENGHT of the packet if it is <8)
* changed the AD setup. Now it is sync with the PWM.
* added the function get_current(jnt)
* Current build 47.
	