@@ -776,10 +776,10 @@ void can_send_broadcast(void)
 		_canmsg.CAN_data[2] = BYTE_H(get_current(1));
 		_canmsg.CAN_data[3] = BYTE_L(get_current(1));
 	
-       _canmsg.CAN_data[4] = BYTE_4(_filt_current[0]);
-		_canmsg.CAN_data[5] = BYTE_3(_filt_current[0]);
-		_canmsg.CAN_data[6] = BYTE_2(_filt_current[0]);
-		_canmsg.CAN_data[7] = BYTE_1(_filt_current[0]);
+  //      _canmsg.CAN_data[4] = BYTE_4(_filt_current[0]);
+//		_canmsg.CAN_data[5] = BYTE_3(_filt_current[0]);
+//		_canmsg.CAN_data[6] = BYTE_2(_filt_current[0]);
+//		_canmsg.CAN_data[7] = BYTE_1(_filt_current[0]);
 
 		_canmsg.CAN_data[4] = BYTE_H(0);
 		_canmsg.CAN_data[5] = BYTE_L(0);
@@ -801,12 +801,18 @@ void can_send_broadcast(void)
 		_canmsg.CAN_data[1] = BYTE_L(_error_position[0]);
 		_canmsg.CAN_data[2] = BYTE_H(_error_position[1]);
 		_canmsg.CAN_data[3] = BYTE_L(_error_position[1]);
-
+		
+	    _canmsg.CAN_data[4] = BYTE_4(_desired[0]);
+		_canmsg.CAN_data[5] = BYTE_3(_desired[0]);
+		_canmsg.CAN_data[6] = BYTE_2(_desired[0]);
+		_canmsg.CAN_data[7] = BYTE_1(_desired[0]);
+/*
 		_canmsg.CAN_data[4] = BYTE_H(_error_torque[0]);
 		_canmsg.CAN_data[5] = BYTE_L(_error_torque[0]);
 		_canmsg.CAN_data[6] = BYTE_H(_error_torque[1]);
 		_canmsg.CAN_data[7] = BYTE_L(_error_torque[1]);
 						
+*/
 		_canmsg.CAN_length = 8;
 		_canmsg.CAN_frameType = DATA_FRAME;
 		CAN1_send (_canmsg.CAN_messID, _canmsg.CAN_frameType, _canmsg.CAN_length, _canmsg.CAN_data);	
@@ -814,7 +820,7 @@ void can_send_broadcast(void)
 		
 //  @@@RANDAZ: important: CAN_SYNCHRO_STEP has been reduced from 5 to 4 because of CAN_SET_ACTIVE_PID_HANDLER()	
 //	if ((broadcast_mask & (1<<(CAN_BCAST_VELOCITY-1))) && _counter == 4) 
-	if ((broadcast_mask & (1<<(CAN_BCAST_VELOCITY-1)))  && _counter == 3)
+	if ((broadcast_mask & (1<<(CAN_BCAST_VELOCITY-1)))   && _counter == 3)
 	{
 		_canmsg.CAN_messID = 0x100;
 		_canmsg.CAN_messID |= (_board_ID) << 4;
